Make stream_id comparable

--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -95,6 +95,7 @@ set (LIBCAF_CORE_SRCS
      src/skip.cpp
      src/splitter.cpp
      src/stream.cpp
+     src/stream_id.cpp
      src/stream_handler.cpp
      src/stream_msg_visitor.cpp
      src/stream_multiplexer.cpp
