--- a/examples/caf-application.ini
+++ b/examples/caf-application.ini
@@ -47,3 +47,18 @@ max-consecutive-reads=50
 heartbeat-interval=0
 ; configures whether the MM detaches its internal utility actors
 middleman-detach-utility-actors=true
+
+; when compiling with logging enabled
+[logger]
+; file name template for output log file files (empty string disables logging)
+file-name="actor_log_[PID]_[TIMESTAMP]_[NODE].log"
+; format for rendering individual log file entries
+file-format="%r %c %p %a %t %C %M %F:%L %m%n"
+; mode for console log output generation (none|colored|uncolored)
+console='none'
+; format for printing individual log entries to the console
+console-format="%m"
+; excludes listed components from logging
+component-filter=""
+; configures the severity level for logs (quiet|error|warning|info|debug|trace)
+verbosity='trace'
