Use cmake-provide module to find OpenCL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -511,12 +511,17 @@ endif()
 
 # build opencl library if not told otherwise and OpenCL package was found
 if(NOT CAF_NO_OPENCL)
-  find_package(OpenCL)
-  if(OpenCL_FOUND)
-    add_optional_caf_lib(opencl)
-    add_optional_caf_binaries(libcaf_opencl/examples)
+  if(${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 3.0)
+    find_package(OpenCL)
+    if(OpenCL_FOUND)
+      add_optional_caf_lib(opencl)
+      add_optional_caf_binaries(libcaf_opencl/examples)
+    else()
+      set(CAF_NO_OPENCL yes)
+    endif()
   else()
     set(CAF_NO_OPENCL yes)
+    message(STATUS "Could NOT find OpenCL, requires Cmake >= 3.1.")
   endif()
 endif()
 
