--- a/libcaf_io/CMakeLists.txt
+++ b/libcaf_io/CMakeLists.txt
@@ -7,22 +7,23 @@ file(GLOB_RECURSE LIBCAF_IO_HDRS "caf/*.hpp")
 
 # list cpp files excluding platform-dependent files
 set (LIBCAF_IO_SRCS
-     src/basp_broker.cpp
      src/abstract_broker.cpp
+     src/acceptor_manager.cpp
+     src/basp_broker.cpp
      src/broker.cpp
      src/default_multiplexer.cpp
      src/doorman.cpp
-     src/middleman.cpp
-     src/middleman_actor.cpp
-     src/middleman_actor_impl.cpp
      src/hook.cpp
      src/interfaces.cpp
      src/manager.cpp
+     src/middleman.cpp
+     src/middleman_actor.cpp
+     src/middleman_actor_impl.cpp
+     src/multiplexer.cpp
+     src/protocol.cpp
      src/scribe.cpp
      src/stream_manager.cpp
      src/test_multiplexer.cpp
-     src/acceptor_manager.cpp
-     src/multiplexer.cpp
      # BASP files
      src/header.cpp
      src/message_type.cpp
