Update documentation of MM INI file options

--- a/examples/caf-application.ini
+++ b/examples/caf-application.ini
@@ -39,14 +39,20 @@ relaxed-sleep-duration=10000
 enable-automatic-connections=false
 ; accepted alternative: 'asio' (only when compiling CAF with ASIO)
 network-backend='default'
-; application identifier of this node
+; application identifier of this node, prevents connection to other CAF
+; instances with different identifier
 app-identifier=""
 ; maximum number of consecutive I/O reads per broker
 max-consecutive-reads=50
 ; heartbeat message interval in ms (0 disables heartbeating)
 heartbeat-interval=0
-; configures whether the MM detaches its internal utility actors
-middleman-detach-utility-actors=true
+; configures whether the MM detaches its internal utility actors, setting
+; this to false allows fully deterministic execution in unit tests
+detach-utility-actors=true
+; configures whether the MM starts a background thread for I/O activity,
+; setting this to false allows fully deterministic execution in unit test and
+; requires the user to trigger I/O manually
+detach-multiplexer=true
 
 ; when compiling with logging enabled
 [logger]
