CMakeLists.txt patched to install .lib on Windows

--- a/libcaf_io/CMakeLists.txt
+++ b/libcaf_io/CMakeLists.txt
@@ -43,7 +43,8 @@ if (NOT CAF_BUILD_STATIC_ONLY)
                         OUTPUT_NAME caf_io)
   if (CYGWIN)
     install(TARGETS libcaf_io_shared RUNTIME DESTINATION bin)
-  elseif (NOT WIN32)
+  else()
+#  elseif (NOT WIN32)
     install(TARGETS libcaf_io_shared LIBRARY DESTINATION lib)
   endif()
   add_dependencies(libcaf_io_shared libcaf_io)
@@ -54,9 +55,9 @@ if (CAF_BUILD_STATIC_ONLY OR CAF_BUILD_STATIC)
   add_library(libcaf_io_static STATIC ${LIBCAF_IO_HDRS} ${LIBCAF_IO_SRCS})
   target_link_libraries(libcaf_io_static ${LD_FLAGS} ${CAF_LIBRARY_CORE_STATIC})
   set_target_properties(libcaf_io_static PROPERTIES OUTPUT_NAME caf_io_static)
-  if(NOT WIN32)
+#  if(NOT WIN32)
     install(TARGETS libcaf_io_static ARCHIVE DESTINATION lib)
-  endif()
+#  endif()
   add_dependencies(libcaf_io_static libcaf_io)
 endif ()
 
