Enable compilation on MSVC v140_clang_c2 platform
Use cmake/MSVC_v140_clang_c2.cmake to provide specific flags.
INSTALL project now installs .lib on Windows.

--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -129,7 +129,7 @@ if (NOT CAF_BUILD_STATIC_ONLY)
                         OUTPUT_NAME caf_core)
   if (CYGWIN)
     install(TARGETS libcaf_core_shared RUNTIME DESTINATION bin)
-  elseif (NOT WIN32)
+  else()
     install(TARGETS libcaf_core_shared LIBRARY DESTINATION lib)
   endif()
   add_dependencies(libcaf_core_shared libcaf_core)
@@ -140,9 +140,7 @@ if (CAF_BUILD_STATIC_ONLY OR CAF_BUILD_STATIC)
   add_library(libcaf_core_static STATIC ${LIBCAF_CORE_HDRS} ${LIBCAF_CORE_SRCS})
   target_link_libraries(libcaf_core_static ${LD_FLAGS})
   set_target_properties(libcaf_core_static PROPERTIES OUTPUT_NAME caf_core_static)
-  if(NOT WIN32)
-    install(TARGETS libcaf_core_static ARCHIVE DESTINATION lib)
-  endif()
+  install(TARGETS libcaf_core_static ARCHIVE DESTINATION lib)
   add_dependencies(libcaf_core_static libcaf_core)
 endif ()
 
