Add first version of worker stats

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,10 @@ if(NOT CAF_NO_EXCEPTIONS)
   set(CAF_NO_EXCEPTIONS no)
 endif()
 
+if(NOT CAF_NO_INSTRUMENTATION)
+  set(CAF_NO_INSTRUMENTATION yes)
+endif()
+
 if(NOT CAF_BUILD_STATIC_ONLY)
   set(CAF_BUILD_STATIC_ONLY no)
 endif()
