--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -114,7 +114,9 @@ set (LIBCAF_CORE_SRCS
      src/uniform_type_info_map.cpp
      src/unprofiled.cpp
      src/work_sharing.cpp
-     src/work_stealing.cpp)
+     src/work_stealing.cpp
+     src/instrumentation/signature_registry.cpp
+     src/instrumentation/worker_stats.cpp)
 
 add_custom_target(libcaf_core)
 
