--- a/cmake/build_config.hpp.in
+++ b/cmake/build_config.hpp.in
@@ -42,4 +42,8 @@
 #define CAF_NO_EXCEPTIONS
 #endif
 
+#if @CAF_NO_INSTRUMENTATION_INT@ != -1
+#define CAF_NO_INSTRUMENTATION
+#endif
+
 #endif //CAF_DETAIL_BUILD_CONFIG_HPP
