Add instrumentation to basp_broker + lock metrics when collecting them + refactor flow of metric collection + do not flatten exported metrics too much (to match influx format)

--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -115,6 +115,7 @@ set (LIBCAF_CORE_SRCS
      src/unprofiled.cpp
      src/work_sharing.cpp
      src/work_stealing.cpp
+     src/instrumentation/callsite_stats.cpp
      src/instrumentation/name_registry.cpp
      src/instrumentation/worker_stats.cpp)
 
