--- a/cmake/build_config.hpp.in
+++ b/cmake/build_config.hpp.in
@@ -34,16 +34,16 @@
 #define CAF_ENABLE_RUNTIME_CHECKS
 #endif
 
+#if @CAF_ENABLE_INSTRUMENTATION_INT@ != -1
+#define CAF_ENABLE_INSTRUMENTATION
+#endif
+
 #if @CAF_USE_ASIO_INT@ != -1
 #define CAF_USE_ASIO
 #endif
 
 #if @CAF_NO_EXCEPTIONS_INT@ != -1
 #define CAF_NO_EXCEPTIONS
-#endif
-
-#if @CAF_NO_INSTRUMENTATION_INT@ != -1
-#define CAF_NO_INSTRUMENTATION
 #endif
 
 #endif //CAF_DETAIL_BUILD_CONFIG_HPP
