Fix build of OpenCL module under windows
closes #644

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -572,6 +572,7 @@ if(NOT CAF_NO_OPENCL)
   if(${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 3.0)
     find_package(OpenCL)
     if(OpenCL_FOUND)
+      include_directories(BEFORE ${OpenCL_INCLUDE_DIRS})
       add_optional_caf_lib(opencl)
       add_optional_caf_binaries(libcaf_opencl/examples)
     else()
