Fix LDFLAGS setup for examples and tools

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -5,16 +5,10 @@ add_custom_target(all_tools)
 
 include_directories(${LIBCAF_INCLUDE_DIRS})
 
-if(${CMAKE_SYSTEM_NAME} MATCHES "Window")
-  set(WSLIB -lws2_32)
-else ()
-  set(WSLIB)
-endif()
-
 macro(add name)
   add_executable(${name} ${name}.cpp ${ARGN})
   target_link_libraries(${name}
-                        ${LD_FLAGS}
+                        ${LDFLAGS}
                         ${CAF_LIBRARIES}
                         ${PTHREAD_LIBRARIES}
                         ${WSLIB})
