Use new clock abstraction for timeouts and delays

--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -110,6 +110,7 @@ set (LIBCAF_CORE_SRCS
      src/terminal_stream_scatterer.cpp
      src/test_actor_clock.cpp
      src/test_coordinator.cpp
+     src/thread_safe_actor_clock.cpp
      src/timestamp.cpp
      src/try_match.cpp
      src/type_erased_tuple.cpp
