Fix typo in caf-application.ini, close #660

--- a/examples/caf-application.ini
+++ b/examples/caf-application.ini
@@ -54,9 +54,9 @@ detach-utility-actors=true
 ; requires the user to trigger I/O manually
 detach-multiplexer=true
 ; enable or disable communication via the TCP transport protocol
-middleman_enable_tcp=true
+enable-tcp=true
 ; enable or disable communication via the UDP transport protocol
-middleman_enable_udp=false
+enable-udp=false
 
 ; when compiling with logging enabled
 [logger]
