Deprecate middleman_* member variables in config

--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -66,6 +66,7 @@ set(LIBCAF_CORE_SRCS
   src/local_actor.cpp
   src/logger.cpp
   src/mailbox_element.cpp
+  src/make_config_option.cpp
   src/match_case.cpp
   src/memory_managed.cpp
   src/merged_tuple.cpp
