--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -37,6 +37,7 @@ set(LIBCAF_CORE_SRCS
   src/blocking_behavior.cpp
   src/concatenated_tuple.cpp
   src/config_option.cpp
+  src/config_option_adder.cpp
   src/config_option_set.cpp
   src/config_value.cpp
   src/decorated_tuple.cpp
